# MemGrab

./: .gitignore  CMakeLists.txt  CMakePresets.json  Claude.md  DESIGN.md  note.txt
.claude/: settings.local.json
docs/: design.md
gum/: frida-gum-example.c  frida-gum.h
qbdi/include/QBDI/: Callback.h  Config.h  Errors.h  InstAnalysis.h  Logs.h  Memory.h  Memory.hpp  Options.h  Platform.h  State.h  VM.h  VM_C.h  Version.h
src/: main.cpp
